银泰js文件转移到js文件夹

--- a/yintai/index.html
+++ b/yintai/index.html
@@ -5,11 +5,11 @@
 	<title>银泰</title>
 	<link rel="stylesheet" href="css/com.css">
 	<link rel="stylesheet" href="css/yintai.css">
-	<script src="function.js"></script>
-	<script src="animate.js"></script>
-	<script src="yintai.js"></script>
-	<script src="shh.js"></script>
-	<script src="jiedianlunbo.js"></script>
+	<script src="./js/function.js"></script>
+	<script src="./js/animate.js"></script>
+	<script src="./js/yintai.js"></script>
+	<script src="./js/shh.js"></script>
+	<script src="./js/jiedianlunbo.js"></script>
 
 </head>
 <body>
