移动js文件转移到js文件夹

--- a/yidong/index.html
+++ b/yidong/index.html
@@ -5,9 +5,9 @@
 	<title>yidong</title>
 	<link rel="stylesheet" type="text/css" href="css/comment.css">
 	<link rel="stylesheet" type="text/css" href="css/yidong.css">
-	<script type="text/javascript" src="function.js"></script>
-	<script type="text/javascript" src="animate.js"></script>
-	<script type="text/javascript" src="yidong.js"></script>
+	<script type="text/javascript" src="./js/function.js"></script>
+	<script type="text/javascript" src="./js/animate.js"></script>
+	<script type="text/javascript" src="./js/yidong.js"></script>
 </head>
 
 <body>
